Add JVM arg to make instantapps-api.jar work
Change-Id: I55803b347fde9ff38eb740ec817e3df788fdaeb7
Fixes: 262385709