@@ -88,7 +88,7 @@ class AndroidStudioProperties(home: Path) : BaseIdeaProperties() {
     allLibraryLicenses += AndroidStudioLibraryLicenses.LICENSES_LIST
     includeIntoSourcesArchiveFilter = BiPredicate { _, _ -> true }
     customJvmMemoryOptions = customJvmMemoryOptions.putAll(arrayOf("-Xms" to "256m", "-Xmx" to "2048m"))
-    additionalIdeJvmArguments = mutableListOf("-XX:FlightRecorderOptions=stackdepth=256")
+    additionalIdeJvmArguments = mutableListOf("-XX:FlightRecorderOptions=stackdepth=256", "--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED")
 
     productLayout.productImplementationModules =
       listOf("intellij.idea.community.resources", "intellij.platform.duplicates.analysis", "intellij.platform.main", "intellij.platform.structuralSearch") -
